ingress/000.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fm
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - thisissoon.fm
    - api.thisissoon.fm
    - relay.thisissoon.fm
    - ws.thisissoon.fm
    secretName: fm-tls
  rules:
  # Web Application
  - host: thisissoon.fm
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
    # Web Application
  - host: ws.thisissoon.fm
    http:
      paths:
      - backend:
          serviceName: websocket
          servicePort: 8080
        path: /
  # API Service
  - host: api.thisissoon.fm
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 80
        path: /
  # Event Relay
  - host: relay.thisissoon.fm
    http:
      paths:
      - backend:
          serviceName: eventrelay
          servicePort: 80
        path: /
